--- a/bosch-indego-controller-dist/pom.xml
+++ b/bosch-indego-controller-dist/pom.xml
@@ -107,11 +107,11 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>target/${pom.artifactId}-${pom.version}-bin.tar.gz</file>
+									<file>target/${project.artifactId}-${project.version}-bin.tar.gz</file>
 									<type>tar.gz</type>
 								</artifact>
 								<artifact>
-									<file>target/${pom.artifactId}-${pom.version}-bin.zip</file>
+									<file>target/${project.artifactId}-${project.version}-bin.zip</file>
 									<type>zip</type>
 								</artifact>
 							</artifacts>
