--- a/bosch-indego-controller-ifttt/pom.xml
+++ b/bosch-indego-controller-ifttt/pom.xml
@@ -43,6 +43,12 @@
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>8.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
-	
+
 </project>
