--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,12 @@
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
-				<version>11.0.9</version>
+				<version>8.1.19.v20160209</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-servlet</artifactId>
-				<version>11.0.9</version>
+				<version>8.1.19.v20160209</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
