--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,15 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>2.10.3</version>
+					<configuration>
+						<additionalparam>-Xdoclint:all -Xdoclint:-missing</additionalparam>
+						<additionalOptions>-Xdoclint:all -Xdoclint:-missing</additionalOptions>
+						<additionalJOptions>
+							<additionalJOption>-Xdoclint:all</additionalJOption>
+							<additionalJOption>-Xdoclint:-missing</additionalJOption>
+						</additionalJOptions>
+						<source>1.8</source>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -160,8 +169,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
