--- a/bosch-indego-controller-srvmock/pom.xml
+++ b/bosch-indego-controller-srvmock/pom.xml
@@ -39,18 +39,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>1.3.5.RELEASE</version>
+			<version>2.7.0</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>1.3.5.RELEASE</version>
+			<version>2.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<version>1.3.5.RELEASE</version>
+			<version>2.7.0</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
